apps/base/blinko/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blinko
  labels:
    app: blinko
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blinko
  template:
    metadata:
      labels:
        app: blinko
    spec:
      containers:
      - name: blinko
        image: blinkospace/blinko:1.1.2
        ports:
        - containerPort: 1111
