apps/base/blinko/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blinko-service
spec:
  ports:
    - port: 80
      targetPort: 1111
  selector:
    app: blinko
  type: ClusterIP
